...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/matchesDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingLeft="16dp"
...
